# manufactory

./: .gitignore  Cargo.toml  crates.py  new.py
crates/mfcereal/: Cargo.toml
crates/mfcereal/src/: decode.rs  encode.rs  lib.rs
crates/mfcontrol/: Cargo.toml
crates/mfcore/: Cargo.toml
crates/mfcore/src/: extensions.rs  lib.rs
crates/mfcore/src/lowlevel/: mod.rs
crates/mfcore/src/object/: mod.rs  object.rs
crates/mfcore/src/object/typing/: int_type.rs  item_type.rs  mod.rs  type_enum.rs
crates/mfcore/src/util/: mod.rs
crates/mfdata/: Cargo.toml
crates/mfdata/src/: lib.rs
crates/mfdata/src/typing/: int_type.rs  item_type.rs  mod.rs  object_type.rs  primitive_type.rs  struct_type.rs
crates/mffmt/: Cargo.toml
crates/mffmt/src/: hex.rs
crates/mfgeometry/: Cargo.toml
crates/mfgeometry/src/: axis.rs  cardinal.rs  direction.rs  flip.rs  lib.rs  orient_table.rs  orientation.rs  orientation_enum.rs  rotation.rs
crates/mfhash/: Cargo.toml
crates/mfhash/src/: deterministic.rs  lib.rs
crates/mfprocgen/: Cargo.toml
crates/mfprocgen/src/: lib.rs  world_seed.rs
crates/mfsandbox/: Cargo.toml
crates/mfsandbox/src/: main.rs
crates/mfworld/: Cargo.toml
crates/mfworld/src/: lib.rs
crates/mfworld/src/geometry/: cube_sides.rs  face.rs  mod.rs
crates/mfworld/src/voxel/: id.rs  mod.rs  voxel.rs
src/: lib.rs
src/game/: mod.rs
src/game/context/: handles.rs  mod.rs
src/game/crafting/: item.rs  lockout.rs  mod.rs
src/game/world/: chunk.rs
