[workspace]
members = ["crates/*"]

[package]
name = "manufactory"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
# Internal
mfcore = { path = "crates/mfcore", version = "0.1.0" }
mfdata = { path = "crates/mfdata", version = "0.1.0" }
mfcontrol = { path = "crates/mfcontrol", version = "0.1.0" }
mfhash = { path = "crates/mfhash", version = "0.1.0" }
mffmt = { path = "crates/mffmt", version = "0.1.0" }

# External
paste = "1.0.15"
rand = "0.9.2"
rand_chacha = "0.9.0"
blake3 = "1.8.2"
thiserror = "2.0.17"

[dependencies]
# Internal
mfcore.workspace = true
mfdata.workspace = true
mfcontrol.workspace = true
mfhash.workspace = true
mffmt.workspace = true

# External
paste.workspace = true
rand.workspace = true
rand_chacha.workspace = true
blake3.workspace = true
thiserror.workspace = true